* What's new in version 3.0

- New --monitor[=INTERVAL] option similar to unix "top". This allows users to
  see statistics about the running module(uptime, module name, invoker uid,
  memory sizes, global variables, and the current probe list along with
  their statistics).

  An interface is also provided to allow control over the running
  module(resetting global variables, sorting the list of probes, deactivating
  and reactivating probes).

- Added support for private global variables and private functions. The scope
  of these is limited to the tapset file they are defined in (PR19136).

- New tapset function string_quoted() to quote and \-escape general strings.
  String $context variables that are pretty-printed are now processed with
  such a quotation engine, falling back to a 0x%x (hex pointer) on errors.

- Functions get_mmap_args() and get_32mmap_args() got deprecated.

* What's new in version 2.9, 2015-10-08

- SystemTap now uses symbols from /proc/kallsyms when kernel debuginfo is not
  available.

- New --prologue-searching[=WHEN] option has been added to stap with '-P' being
  its short counterpart.  Using --prologue-searching=never turns prologue
  searching deliberately off working around issue of int_arg() returning wrong
  value when a 32-bit userspace binary having debug info is being probed with
  active prologue searching (PR18649).

- The powerpc variant of nd_syscall.compat_sysctl got deprecated on favor of
  nd_syscall.sysctl32. This aligns the nd_syscall to its respective syscall and
  to ia64/s390/x86_64 variants too.

- New tapset function assert(expression, msg) has been added.

- Embedded-C functions may now use the new STAP_PRINTF(fmt, ...)
  macro for output.

- New tapset functions fullname_struct_path and fullname_struct_nameidata
  resolve full path names from internal kernel struct pointers.
  
- New tapset functions arch_bytes() and uarch_bytes() to obtain address size
  for kernel and user space respectively.
